# the-dozens-django

./: .env.vault  .gitignore  .infisical.json  .pre-commit-config.yaml  .pylintrc  Dockerfile  Initial Data Load.sql  RAPIDAPI_README.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  Taskfile.yml  WARP.md  conftest.py  devcontainer.json  docker-compose.yaml  entrypoint.sh  env_maker.py  init.sh  init.sql  makefile  pyproject.toml  pytest_dozens_plugin.py  pyvenv.cfg  qodana.sarif.json  qodana.yaml  redis.conf  requirements.txt  responsive-fixes.patch  schema.yaml  schema.yml  user.acl
.codacy/: codacy.yaml
.configs/: .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .sourcery.yaml  redis.conf
.deploy/: Dockerfile  apache.conf  docker-compose.yml  gunicorn.conf.py  gunicorn.ini  infra-docker-compose.yml  prometheus.yml
.deploy/grafana/dashboards/: api_tester.py  dozens-overview.json
.deploy/signoz/dashboards/: dozens-overview.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: content-review-request.md  insult-review.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: commit_check.yaml  dockerize.yaml  qodana_code_quality.yml
.task/checksum/: freeze
.well-known/appspecific/: com.chrome.devtools.json
applications/API/: admin.py  apps.py  authentication.py  emails.py  endpoints.py  errors.py  filters.py  forms.py  models.py  permissions.py  schema_extensions.py  schema_extenstions.py  serializers.py  urls.py  views.py
applications/API/auth/: auth_endpoints.py
applications/API/management/commands/: cache.py
applications/API/migrations/: 0001_initial.py  0002_alter_insult_status_insult_idx_added_status_cat_and_more.py  0002_alter_insultcategory_options_and_more.py  0003_alter_insult_reference_id.py  0003_insult_reports_count.py  0004_alter_insult_reports_count.py  0005_alter_insult_reports_count.py  0006_insultreview_insult.py  0007_insultreview_idx_insult__ref_id.py  0008_rename_idx_insult__ref_id_idx_insult_ref_id_and_more.py  0009_insultcategory_description.py  0010_alter_insult_managers_alter_insultcategory_managers_and_more.py  0011_remove_theme_category_insultcategory_theme.py  0012_alter_insult_content_alter_insult_reports_count_and_more.py  0013_alter_insult_reports_count_and_more.py
applications/API/templates/admin/: insult_re_categorize.html
applications/API/templates/rest_framework/: api.html  login.html
applications/API/tests/: admin_test_urls.py  schema.py  test_admin.py  test_emails.py  test_endpoints.py  test_forms.py  test_serializers.py  test_signals.py  test_theme_consistency.py  urls.py
applications/frontend/: urls.py  views.py
applications/frontend/tests/: test_report_view.py  test_views.py
applications/graphQL/: apps.py  mutations.py  query.py  schema.py  type.py  urls.py  views.py
applications/graphQL/tests/: test_mutations.py  test_query.py  test_query_edge_cases.py  test_schema.py  test_subscriptions.py  test_type.py  test_views.py
applications/ld_integration/: __init__.py  apps.py  client.py  context.py  flags.py  middleware.py
applications/ld_integration/management/commands/: ld_healthcheck.py
common/: cache.py  cache_managers.py  metrics.py  middleware.py  performance.py  preformance.py
common/backends/: storage.py
common/tests/: test_cache_managers.py  test_metrics.py  test_middleware.py  test_performance.py
common/utils/: helpers.py
core/: admin_view.py  apps.py  asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
core/tests/: test_metrics_view.py
data/: Initial Data Load.sql
requirements/: base.txt  dev.txt
run/: conftest.py  manage.py
schema/: The Dozens API.paw  Yo Mama Joke APO.txt  schema.json  schema2025-03-19.yaml  schema2025-08-22.yaml  schema2025-08-22_23:51:54.yaml  schema2026-03-09.yaml  schema2026-03-09_02:22:15.yaml
scripts/: pytest_doppler.sh
static/css/: status.css  styles.css
static/graphene_django/: graphiql.js
static/js/: scripts.js
templates/: 404.html  index.html  landing.html  status.html
templates/admin/: grafana_dashboard.html
templates/drf_spectacular/: redoc.html  swagger_ui.html
templates/email/: welcome.html
templates/graphene/: graphiql.html
templates/includes/: getting-started.html  history-modal.html  joke-reporting-form.html
thedozens/: manage.py  schema.json
thedozens/API/: admin.py  dataclasses.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
thedozens/API/migrations/: 0001_initial.py  0002_alter_insultreview_status.py  0003_insultreview.py  0005_alter_insultreview_insult_id.py  0007_insult_idx_category_insult_idx_explicit_category_and_more.py  0007_insult_pk_idx_insult_category_idx_insult_creator_idx.py  0008_alter_insultreview_insult_id.py
thedozens/API/tests/: test_forms.py
thedozens/applications/API/: apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
thedozens/applications/API/migrations/: 0001_initial.py
thedozens/applications/API/tests/: test_endpoints.py  test_forms.py
thedozens/applications/frontend/: views.py
thedozens/applications/graphQL/: query.py
thedozens/common/: cache.py  metrics.py
thedozens/common/backends/: storage.py
thedozens/core/: settings.py  urls.py  wsgi.py
thedozens/graphQL/: mutations.py  query.py  schema.py  urls.py
thedozens/run/: manage.py
thedozens/static/css/: styles.css
thedozens/static/js/: preloader.js  scripts.js
thedozens/staticfiles/css/: styles.css
thedozens/staticfiles/rest_framework_swagger/bundles/: app.bundle.js
thedozens/templates/: index.html  preloader.html
thedozens/templates/includes/: getting-started.html
thedozens/thedozens/: apm.py  settings.py  test.py  urls.py  views.py  wsgi.py
thedozens/thedozens/backends/: storage.py
thedozens/thedozens/templates/: index.html
thedozens/thedozens/templates/includes/: getting-started.html  history-modal.html  joke-reporting-form.html
thedozens/thedozens/utils/: category_resolver.py
