[tool.poetry]
name = "the-dozens-django"
version = "1.0.0"
description = "Conversion of the Dozens Roast API from Flask RestX to Django DRF framework"
authors = ["Terry Brooks"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
markdown = "^3.5"
djangorestframework = "^3.15.2"
django-filter = "^23.3"
loguru = "^0.7.2"
django-debug-toolbar = "^4.2.0"
logtail-python = "^0.2.7"
redis = {extras = ["hiredis"], version = "^5.0.1"}
django-mailer = "^2.3"
graphene-django = "^3.1.5"
uritemplate = "^4.1.1"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^0.7"
ghapi = "^1.0.4"
gunicorn = "22.0.0"
django-prometheus = "^2.3.1"
django-redis = "^5.4.0"
drf-spectacular = "^0.26.5"
django-recaptcha = "^3.0.0"
django-cockroachdb = "^5.0"
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"
poetry-plugin-export = "^1.8.0"
drf-spectacular-sidecar = "^2024.7.1"
highlight-io = {extras = ["django"], version = "^0.8.5"}
whitenoise = "^6.7.0"
django-bunny = "^1.1.6"
django-storages = "^1.14.4"
django-cors-headers = "^4.4.0"
djangorestframework-dataclasses = "^1.3.1"
django-configurations = "^2.5.1"
arrow = "^1.3.0"
dj-database-url = "^2.3.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
psycopg-pool = "^3.2.4"
drf-extensions = "^0.7.1"
kolo = "^2.37.0"
msgpack = "^1.1.0"
nose = "^1.3.7"
coverage = "^7.6.12"
humanize = "^4.12.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pip = "^23.3"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
django-stubs = "^5.0.2"
django-stubs-ext = "^5.0.2"
sourcery = "^1.21.0"

[tool.poetry.group.docs.dependencies]
drf-spectacular = "^0.26.5"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
django-discover-runner = "^1.0"
django-nose = "^1.4.7"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"

[tool.djlint]
format_css=true
format_js=true
ignore="H021,T001,H008,H030,H031,H006"

[tool.djlint.css]
indent_size=5

[tool.djlint.js]
indent_size=5

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.kolo.filters]
