[tool.poetry]
name = "the-dozens-django"
version = "1.0.0"
description = "Conversion of the Dozens Roast API from Flask RestX to Django DRF framework"
authors = ["Terry Brooks"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django = "^5.0"
markdown = "^3.5"
djangorestframework = "^3.15.2"
django-filter = "^23.3"
loguru = "^0.7.2"
django-debug-toolbar = "^4.2.0"
logtail-python = "^0.2.7"
redis = {extras = ["hiredis"], version = "^5.0.1"}
django-mailer = "^2.3"
graphene-django = "^3.1.5"
uritemplate = "^4.1.1"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^0.7"
ghapi = "^1.0.4"
gunicorn = "22.0.0"
django-prometheus = "^2.3.1"
django-redis = "^5.4.0"
drf-spectacular = "^0.26.5"
django-recaptcha = "^3.0.0"
django-cockroachdb = "^5.0"
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"
poetry-plugin-export = "^1.8.0"
drf-spectacular-sidecar = "^2024.7.1"
highlight-io = {extras = ["django"], version = "^0.8.5"}
whitenoise = "^6.7.0"
django-bunny = "^1.1.6"
django-storages = "^1.14.4"
django-cors-headers = "^4.4.0"
djangorestframework-dataclasses = "^1.3.1"
django-configurations = "^2.5.1"
arrow = "^1.3.0"
dj-database-url = "^2.3.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
psycopg-pool = "^3.2.4"
drf-extensions = "^0.7.1"
msgpack = "^1.1.0"
coverage = "^7.6.12"
humanize = "^4.12.1"
boto3 = "^1.37.32"
transformers = "^4.54.1"
torch = "^2.7.1"
spacy = "^3.8.7"
django-select2 = "^8.4.1"
argon2-cffi = "^25.1.0"
pylint-django = "^2.6.1"
psutil = "^7.0.0"
prospector = {extras = ["with-everything"], version = "^1.17.3"}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pip = "^23.3"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
django-stubs = "^5.0.2"
django-stubs-ext = "^5.0.2"
kolo = "^2.37.0"
djlint = "^1.36.4"
ruff = "^0.12.7"
pylint-django = "^2.6.1"
pyrefly = "^0.37.0"

[tool.poetry.group.docs.dependencies]
drf-spectacular = "^0.26.5"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
django-discover-runner = "^1.0"
django-nose = "^1.4.7"
pytest-django = "^4.8.0"
bandit = "^1.8.6"
safety = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests/test_*.py", "tests_*.py"]

[tool.djlint]
format_css=true
format_js=true
ignore="H021,T001,H008,H030,H031,H006"

[tool.djlint.css]
indent_size=5

[tool.djlint.js]
indent_size=5

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pyrefly]
# Path(s) to include for scanning
search_path = ["applications/API/permissions","applications/graphQL/", "applications/frontend/", "common", "run", "core"]
includes = ["*.py"]
# Path(s) to exclude from scanning
excludes = ["venv", "build", "dist", "__pycache__"]

# Python version compatibility
python_version = "3.12"

# Whether to run type checking
type_checking = true

# Whether to run linting
linting = true

# Whether to run formatting
formatting = true

# Automatically fix issues when possible
auto_fix = true

# Maximum line length (applies to linters/formatters)
line_length = 300

# Enable strict mode for type checking
strict = false

[tool.pyrefly.lint]
# Select which linters to enable
enabled = ["flake8", "pylint"]

# Additional linter options
flake8_ignore = ["E501"]
pylint_disable = ["C0114", "C0115"]

[tool.pyrefly.format]
# Choose a formatter (e.g., black, yapf)
formatter = "black"

[tool.pyrefly.type_check]
# Which type checker to use (e.g., mypy, pyright)
checker = "mypy"

# Extra mypy options
mypy_strict = true



# --- Pylint configuration migrated from .pylintrc ---
[tool.pylint.MAIN]
analyse-fallback-blocks = false
clear-cache-post-run = false
fail-under = 10
ignore = ["CVS"]
# init-hook intentionally omitted
jobs = 1
limit-inference-results = 100
load-plugins = ["pylint_django"]
persistent = true
prefer-stubs = false
py-version = "3.11"
recursive = false
suggestion-mode = true
unsafe-load-any-extension = true

[tool.pylint.BASIC]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
docstring-min-length = -1
function-naming-style = "snake_case"
good-names = ["i", "j", "k", "ex", "Run", "_"]
include-naming-hint = true
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
no-docstring-rgx = "^_"
property-classes = "abc.abstractproperty"
variable-naming-style = "snake_case"

[tool.pylint.CLASSES]
check-protected-access-in-special-methods = true
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make", "os._exit"]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.DESIGN]
exclude-too-few-public-methods = true
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-positional-arguments = 5
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ""

[tool.pylint.FORMAT]
expected-line-ending-format = ""
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren = 4
indent-string = "'    '"
# max-line-length left unset intentionally to inherit defaults
max-line-length = 3000
max-module-lines = 50000
single-line-class-stmt = false
single-line-if-stmt = true

[tool.pylint.IMPORTS]
allow-any-import-level = false
allow-reexport-from-package = false
allow-wildcard-with-all = false
known-third-party = ["enchant"]

[tool.pylint.LOGGING]
logging-format-style = "new"
logging-modules = ["logging"]

[tool.pylint."MESSAGES CONTROL"]
confidence = [
  "HIGH",
  "CONTROL_FLOW",
  "INFERENCE",
  "INFERENCE_FAILURE",
  "UNDEFINED",
]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "use-implicit-booleaness-not-comparison-to-string",
  "use-implicit-booleaness-not-comparison-to-zero",
]
enable = []

[tool.pylint.METHOD_ARGS]
# Require timeout on selected HTTP methods
"timeout-methods" = [
  "requests.api.delete",
  "requests.api.get",
  "requests.api.head",
  "requests.api.options",
  "requests.api.patch",
  "requests.api.post",
  "requests.api.put",
  "requests.api.request",
]

[tool.pylint.MISCELLANEOUS]
notes = ["FIXME", "XXX", "TODO"]
notes-rgx = ""

[tool.pylint.REFACTORING]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]
suggest-join-with-non-empty-separator = true

[tool.pylint.REPORTS]
evaluation = "max(0, 0 if fatal else 10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10))"
msg-template = ""
# output-format intentionally omitted
reports = false
score = true

[tool.pylint.SIMILARITIES]
ignore-comments = true
ignore-docstrings = false
ignore-imports = false
ignore-signatures = false
min-similarity-lines = 4

[tool.pylint.SPELLING]
max-spelling-suggestions = 4
spelling-dict = ""
spelling-ignore-comment-directives = [
  "fmt: on",
  "fmt: off",
  "noqa:",
  "noqa",
  "nosec",
  "isort:skip",
  "mypy:",
]
spelling-ignore-words = []
spelling-private-dict-file = ""
spelling-store-unknown-words = false

[tool.pylint.STRING]
check-quote-consistency = true
check-str-concat-over-line-jumps = false

[tool.pylint.TYPECHECK]
contextmanager-decorators = ["contextlib.contextmanager"]
# generated-members left empty
ignore-none = true
ignore-on-opaque-inference = true
ignored-checks-for-mixins = [
  "no-member",
  "not-async-context-manager",
  "not-context-manager",
  "attribute-defined-outside-init",
]
ignored-classes = [
  "optparse.Values",
  "thread._local",
  "_thread._local",
  "argparse.Namespace",
]
missing-member-hint = true
missing-member-hint-distance = 1
missing-member-max-choices = 1
mixin-class-rgx = ".*[Mm]ixin"

[tool.pylint.VARIABLES]
additional-builtins = []
allow-global-unused-variables = true
allowed-redefined-builtins = []
callbacks = ["cb_", "_cb"]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_"
init-import = false
redefining-builtins-modules = [
  "six.moves",
  "past.builtins",
  "future.builtins",
  "builtins",
  "io",
]


[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ["applications/API/*", "common/*"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/.venv/*",
  "manage.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80
