[tool.poetry]
name = "the-dozens-django"
version = "0.1.0"
description = "Conversion of the Dozens Roast API from Flask RestX to Django DRF framework"
authors = ["Terry Brooks"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = ">=5.2.5,<6.0"
markdown = "^3.5"
djangorestframework = "^3.15.2"
django-filter = "^23.3"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
django-debug-toolbar = "^4.2.0"
logtail-python = "^0.2.7"
psycopg2-binary = "^2.9.9"
redis = {extras = ["hiredis"], version = "^5.0.1"}
django-mailer = "^2.3"
graphene-django = "^3.1.5"
uritemplate = "^4.1.1"
django-rest-swagger = "^2.2.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^0.7"
django-cacheops = "^7.0.1"
ghapi = "^1.0.4"
gunicorn = "^22.0.0"
django-prometheus = "^2.3.1"
django-redis = "^5.4.0"
drf-spectacular = "^0.26.5"
infisical-python = "^2.3.6"
requests = ">=2.32.4"
django-recaptcha = "^3.0.0"
launchdarkly-server-sdk = "^9.15.0"
poetry = "^2.3.2"
poetry-plugin-export = "^1.10.0"
launchdarkly-observability = "^1.1.0"
django-configurations = "^2.5.1"
django-cors-headers = "^4.9.0"
django-storages = "^1.14.6"
djoser = "^2.3.3"
django-select2 = "^8.4.8"
drf-spectacular-sidecar = "^2026.1.1"
drf-extensions = "^0.8.0"
humanize = "^4.15.0"
arrow = "^1.4.0"
whitenoise = "^6.11.0"
boto3 = "^1.42.54"
drf-restwind = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.5.2"
coverage = "^7.0"
pytest-cov = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pip = "^23.3"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pre-commit = "^3.5.0"
kolo = "^2.16.3"
autoflake = "^2.2.1"
ruff = "^0.15.2"
djlint = "^1.36.4"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thedozens.settings"

[tool.djlint]
format_css=true
format_js=true
ignore="H021,T001,H008,H030,H031,H006"

[tool.djlint.css]
indent_size=5

[tool.djlint.js]
indent_size=5

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "thedozens.settings"